--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+</dict>
+
+
+<key>NSCameraUsageDescription</key>
+<string>Cette application a besoin d'accéder à la caméra pour permettre la capture de vidéos.</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>Cette application a besoin d'accéder à la bibliothèque de photos pour sélectionner des vidéos.</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>Cette application a besoin d'accéder au microphone pour enregistrer l'audio avec les vidéos.</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
